--- a/FIRfilter_python.ipynb
+++ b/FIRfilter_python.ipynb
@@ -235,7 +235,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.savetxt(\"signal.txt\")"
+   ]
   },
   {
    "cell_type": "code",
