modified significant bits

--- a/FIRfilter_python.ipynb
+++ b/FIRfilter_python.ipynb
@@ -119,8 +119,7 @@
     "def signed_to_double(a,Q):\n",
     "    signed = np.where(a >= 128, a-256, a)\n",
     "    double_a = signed*2**(-Q)\n",
-    "    return double_a\n",
-    "    "
+    "    return double_a"
    ]
   },
   {
@@ -255,6 +254,42 @@
    "source": [
     "tmp = double_to_signed(y[:7], Q)\n",
     "print([bin(i) for i in tmp])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## find maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "241 22 31812\n",
+      "0b111110001000100\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = max(double_to_signed(y, Q))\n",
+    "t = max(double_to_signed(taps, Q))\n",
+    "\n",
+    "mult = s * t * 6\n",
+    "print(bin(mult))"
    ]
   },
   {
